# diesel-axum-lambda-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cargo-generate.toml  docker-compose.test.yml  docker-compose.yml  makefile
.github/workflows/: ci.yml  tests.yml
axum-diesel-api/: Cargo.toml  README.md
axum-diesel-api/src/: lib.rs  responses.rs  result.rs
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
hooks/: post-gen.sh
infra/: README.md  samconfig.toml  template.yaml
migrations/00000000000001_create_tasks/: down.sql  up.sql
scripts/: deploy-lambda.sh
src/: app.rs  error.rs  main.rs  response.rs
src/api/: error.rs  mod.rs  requests.rs  responses.rs  result.rs
src/db/: connection.rs  error.rs  mod.rs  schema.rs
src/db/models/: mod.rs  task.rs
src/db/repositories/: task_repository.rs
src/handlers/: health.rs  task.rs
src/services/: task_service.rs
tests/integration/: health_test.rs
