[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["{{authors}}"]
description = "{{description}}"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lambda_http = "1.0.2"
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "uuid", "chrono"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
anyhow = "1.0.100"
