[package]
name = "axum-diesel-project"
version = "0.1.0"
edition = "2024"
description = "Production-grade Rust API template with Axum and Diesel"
authors = ["DevRickyCst <dev@example.com>"]

[dependencies]
# API types (shared with frontend)
axum-diesel-api = { path = "axum-diesel-api", version = "0.1.0" }

# Web framework
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace"] }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Database
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date/Time
chrono = { version = "0.4.43", features = ["serde"] }

# UUID
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.20"

# AWS Lambda
lambda_http = "1.0.2"

[dev-dependencies]
# Additional testing utilities can be added here
